# search-engine

./: CMakeLists.txt  README.md  answers.json  config.json  requests.json
resourses/: file001.txt  file002.txt  file003.txt  file004.txt
search-engine/: CMakeLists.txt  converter_json.cpp  converter_json.h  inverted_index.cpp  inverted_index.h  main.cpp  searchserver.cpp  searchserver.h
